--- a/pages/album_2.html
+++ b/pages/album_2.html
@@ -39,13 +39,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" style="float: right;">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#map">Mapa</a>
+                        <a class="nav-link active text-white" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#albuns">Álbuns</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#about">Sobre</a>
+                        <a class="nav-link active text-white" href="#obras">Obras</a>
                     </li>
                 </ul>
             </div>
@@ -80,7 +77,7 @@
         </section>
 
 
-        <h4 class="pt-5">Obras</h4>
+        <h4 id="obras" class="pt-5">Obras</h4>
         <hr />
 
         <section class="container-fluid">
