--- a/pages/album_8.html
+++ b/pages/album_8.html
@@ -39,16 +39,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent" style="float: right;">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#map">Mapa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#albuns">Álbuns</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#about">Sobre</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" href="#obras">Obras</a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -79,7 +77,7 @@
         </section>
 
 
-        <h4 class="pt-5">Obras</h4>
+        <h4 id="obras" class="pt-5">Obras</h4>
         <hr />
 
         <section class="container-fluid">
