--- a/pages/album_3.html
+++ b/pages/album_3.html
@@ -159,8 +159,53 @@
             </div>
 
         </section>
-
     </main>
+
+    <footer id="about" class="bg-secondary text-white mt-4">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Sobre</h5>
+
+                    <p class="text-justify">
+                       Primeiro trabalho prático da matéria de Desenvolvimento de Interfaces Web. Esse trabalho tem como objetivo principal apresentar álbuns geolocalizados. No meu caso, resolvi escolher como tema para os álbuns artistas e suas obras, sendo a localização a cidade de nascimento dos artistas.
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Autoria</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <strong>Nome:</strong> Gustavo Felix
+                        </li>
+                        <li>
+                            <strong>Curso:</strong> Ciência da computação
+                        </li>
+                        <li>
+                            <strong>Turma:</strong> Tarde
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-0">Redes sociais</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="https://github.com/gusfelix" target="_blank" class="text-white">
+                                <i class="bi bi-github mr-2"></i>&nbsp; GitHub</a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.linkedin.com/in/gustavo-felix-30a5b3226/" target="_blank" class="text-white">
+                                <i class="bi bi-linkedin mr-2"></i>&nbsp; LinkedIn</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
