--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         <img src="assets/img/Vincent_van_Gogh_profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Vincent Van Gogh</h5>
+                            <p>Pintor expressionista</p>
                         </div>
                     </div>
                     </a>
@@ -121,6 +122,7 @@
                         <img src="assets/img/jean-michel-basquiat-profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Jean-Michel Basquiat</h5>
+                            <p>Arte urbana moderna</p>
                         </div>
                     </div>
                     </a>
@@ -131,6 +133,7 @@
                         <img src="assets/img/salvador-dali-profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Salvador Dalí</h5>
+                            <p>Surrealismo famoso</p>
                         </div>
                     </div>
                     </a>
@@ -141,6 +144,7 @@
                         <img src="assets/img/Claude_Monet-profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Claude Monet</h5>
+                            <p>Mestre impressionista</p>
                         </div>
                     </div>
                     </a>
@@ -152,6 +156,7 @@
                         <img src="assets/img/candido-portinari-profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Candido Portinari</h5>
+                            <p>Arte brasileira</p>
                         </div>
                     </div>
                     </a>
@@ -162,6 +167,7 @@
                         <img src="assets/img/frida-kahlo-profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Frida Kahlo</h5>
+                            <p>Autorretratos icônicos</p>
                         </div>
                     </div>
                     </a>
@@ -172,6 +178,7 @@
                         <img src="assets/img/Tarsila_do_Amaral_profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Tarsila do Amaral</h5>
+                            <p>Vanguarda brasileira</p>
                         </div>
                     </div>
                     </a>
@@ -182,6 +189,7 @@
                         <img src="assets/img/pablo-picasso-profile.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Pablo Picasso</h5>
+                            <p>Gênio do cubismo</p>
                         </div>
                     </div>
                     </a>
